--- a/index.html
+++ b/index.html
@@ -113,32 +113,36 @@
           <a data-scrolllink href="#contact" class="btn btn-primary btn-magnet" data-magnet>Demander un devis</a>
           <a data-scrolllink href="#prestations" class="btn btn-ghost btn-magnet" data-magnet>Voir les prestations</a>
         </div>
-        <p class="hero__credits small">Pour les professionnels & particuliers.</p>
+        <p class="hero__credits small">Interventions auprès des Professionnels & Particuliers</p>
       </div>
     </div>
   </header>
 
   <!-- DÉMARCHE -->
-  <section id="demarche" class="section demarche container" aria-labelledby="h-demarche">
-    <div class="split">
-      <div>
-        <h2 id="h-demarche">Ma <span class="accent">démarche</span></h2>
-        <p class="lead">Je conçois le service comme une relation humaine : empathie, écoute, patience, persévérance, respect, générosité, soin.</p>
-        <p class="lead">Suite à mon intervention, assistance, réparation ou dépannage, je souhaite que vous ayez le sentiment que l’informatique vous facilite la vie et vous aide au quotidien.</p>
-        <p class="lead">Je prends le temps de vous expliquer et de vous former afin que vous puissiez vous sentir à l'aise avec l'informatique.</p>
-        <ul class="values">
-          <li data-magnet><span>😊</span> Sourire & pédagogie</li>
-          <li data-magnet><span>🕐</span> Ponctualité & fiabilité</li>
-          <li data-magnet><span>🧩</span> Adaptabilité & clarté</li>
-          <li data-magnet><span>🛡️</span> Transparence & sécurité</li>
-        </ul>
-      </div>
-      <div class="card profile" data-magnet>
-        <img src="img/profile.jpg" alt="Rémy Roger – Informatique Cerdagne" loading="lazy" />
-        <div class="profile__txt">
-          <h3>Rémy ROGER</h3>
-          <p>Un amoureux de la relation client, à votre service en Cerdagne.</p>
-          <a data-scrolllink href="#contact" class="btn btn-primary small btn-magnet">Me contacter</a>
+    <!-- DÉMARCHE -->
+  <section id="demarche" class="section demarche" aria-labelledby="h-demarche">
+    <div class="container">
+      <div class="split">
+        <div>
+          <h2 id="h-demarche">Ma <span class="accent">démarche</span></h2>
+          <p class="lead">Je conçois le service comme une relation humaine : empathie, écoute, patience, persévérance, respect, générosité, soin.</p>
+          <p class="lead">Suite à mon intervention, assistance, réparation ou dépannage, je souhaite que vous ayez le sentiment que l’informatique vous facilite la vie et vous aide au quotidien.</p>
+          <p class="lead">Je prends le temps de vous expliquer et de vous former afin que vous puissiez vous sentir à l'aise avec l'informatique.</p>
+          <ul class="values">
+            <li data-magnet><span>😊</span> Sourire & pédagogie</li>
+            <li data-magnet><span>🕐</span> Ponctualité & fiabilité</li>
+            <li data-magnet><span>🧩</span> Adaptabilité & clarté</li>
+            <li data-magnet><span>🛡️</span> Transparence & sécurité</li>
+          </ul>
+        </div>
+
+        <div class="card profile" data-magnet>
+          <img src="img/profile.jpg" alt="Rémy Roger – Informatique Cerdagne" loading="lazy" />
+          <div class="profile__txt">
+            <h3>Rémy ROGER</h3>
+            <p>Un amoureux de la relation client, à votre service en Cerdagne.</p>
+            <a data-scrolllink href="#contact" class="btn btn-primary small btn-magnet">Me contacter</a>
+          </div>
         </div>
       </div>
     </div>
@@ -160,23 +164,31 @@
     </div>
   </section>
 
-  <!-- EXPERTISE -->
-  <section id="expertise" class="section expertise container" aria-labelledby="h-expertise">
-    <div class="split reverse">
-      <div class="card glow">
-        <h3>Expertise</h3>
-        <ul class="tick">
-          <li data-magnet>Programmation web & applicatives (automatisation des tâches répétitives)</li>
-          <li data-magnet>Cybersécurité, Récupération de données & Sauvegardes</li>
-          <li data-magnet>Optimisation des performances</li>
-          <li data-magnet>Spécialiste de la recommandation d'achat désintéressée</li>
-        </ul>
-      </div>
-      <div>
-        <h2 id="h-expertise">Expertise <span class="accent">tech + humaine</span></h2>
-        <p class="lead">Au-delà de la technique, je prends le temps d'écouter, d’expliquer et de rassurer.</p>
-        <p class="lead">Professionel de l'accompagnement, je suis également certifié Coach Consultant RNCP 7</p>
-        <div class="chips"><span data-magnet>Transparence</span><span data-magnet>Patience</span><span data-magnet>Clarté</span><span data-magnet>Suivi</span><span data-magnet>Bienveillance</span></div>
+    <!-- EXPERTISE -->
+  <section id="expertise" class="section expertise" aria-labelledby="h-expertise">
+    <div class="container">
+      <div class="split reverse">
+        <div class="card glow">
+          <h3>Expertise</h3>
+          <ul class="tick">
+            <li data-magnet>Programmation web & applicatives (automatisation des tâches répétitives)</li>
+            <li data-magnet>Cybersécurité, Récupération de données & Sauvegardes</li>
+            <li data-magnet>Optimisation des performances</li>
+            <li data-magnet>Spécialiste de la recommandation d'achat désintéressée</li>
+          </ul>
+        </div>
+        <div>
+          <h2 id="h-expertise">Expertise <span class="accent">tech + humaine</span></h2>
+          <p class="lead">Au-delà de la technique, je prends le temps d'écouter, d’expliquer et de rassurer.</p>
+          <p class="lead">Coach Consultant Certifié, je suis également spécialisé dans l'accompagnement pour mieux vous servir.</p>
+          <div class="chips">
+            <span data-magnet>Transparence</span>
+            <span data-magnet>Patience</span>
+            <span data-magnet>Clarté</span>
+            <span data-magnet>Suivi</span>
+            <span data-magnet>Bienveillance</span>
+          </div>
+        </div>
       </div>
     </div>
   </section>
