--- a/index.html
+++ b/index.html
@@ -196,15 +196,30 @@
   <!-- AVIS -->
   <section id="avis" class="section avis" aria-labelledby="h-avis">
     <div class="container">
-      <h2 id="h-avis">Votre satisfaction : <span class="accent">ma plus grande récompense !</span></h2>
-      <p class="lead">Avis Google de mes clients.</p>
+      <h2 id="h-avis">
+        Votre satisfaction : <span class="accent">ma plus grande récompense !</span>
+      </h2>
+
+      <p class="lead">
+        Avis Google de mes clients.
+        <a
+          href="https://www.google.com/maps/place/Informatique+Cerdagne+-+Rémy+ROGER/@42.4626447,1.9389666,15z/data=!4m6!3m5!1s0xff50f70f4b9a303:0xff407f2d8556019c!8m2!3d42.4626447!4d1.9389666!16s%2Fg%2F11shllyt86?entry=ttu"
+          target="_blank"
+          rel="noopener"
+        >
+          Voir tous les avis sur Google
+        </a>
+      </p>
+
       <div class="reviews" aria-live="polite" data-magnet></div>
+
       <div class="reviews__controls" aria-controls="reviews">
         <button class="prev" type="button" aria-label="Avis précédent" data-magnet>←</button>
         <button class="next" type="button" aria-label="Avis suivant" data-magnet>→</button>
       </div>
     </div>
   </section>
+
 
   <!-- CONTACT -->
   <section id="contact" class="section contact" aria-labelledby="h-contact">
