--- a/index.html
+++ b/index.html
@@ -193,9 +193,9 @@
     </div>
   </section>
 
-  <section id="avis" class="section avis" aria-labelledby="h-avis">
+<section id="avis" class="section avis" aria-labelledby="h-avis">
   <div class="container">
-    <h2 id="h-avis">
+    <h2 id="h-avis" data-split>
       Votre satisfaction : <span class="accent">ma plus grande récompense !</span>
     </h2>
 
@@ -238,14 +238,13 @@
     </template>
 
     <div class="reviews" aria-live="polite" data-magnet></div>
+
     <div class="reviews__controls" aria-controls="reviews">
       <button class="prev" type="button" aria-label="Avis précédent" data-magnet>←</button>
       <button class="next" type="button" aria-label="Avis suivant" data-magnet>→</button>
     </div>
   </div>
-</section>
-
-
+  </section>
 
   <!-- CONTACT -->
   <section id="contact" class="section contact" aria-labelledby="h-contact">
