--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
     </h2>
 
     <p class="lead">
-      Avis Google de mes clients.
+      Ce que vous dites de mes services.
       <a
         href="https://www.google.com/maps/place/Informatique+Cerdagne+-+Rémy+ROGER/@42.4626447,1.9389666,15z/data=!4m6!3m5!1s0xff50f70f4b9a303:0xff407f2d8556019c!8m2!3d42.4626447!4d1.9389666!16s%2Fg%2F11shllyt86?entry=ttu"
         target="_blank"
@@ -210,34 +210,69 @@
       </a>
     </p>
 
-    <!-- Template avatar SVG qui fait coucou -->
-    <template id="review-avatar-template">
-      <div class="review__avatar">
-        <svg viewBox="0 0 80 80" class="review__avatar-svg" aria-hidden="true">
-          <circle cx="40" cy="40" r="36" fill="rgba(15,23,42,0.95)" />
-          <!-- T-shirt -->
-          <rect x="26" y="38" width="28" height="22" rx="10" fill="#4F46E5" />
-          <!-- Tête -->
-          <circle cx="40" cy="28" r="11.5" fill="#FDE0C2" />
-          <!-- Cheveux -->
-          <path d="M30 26 Q40 16 50 26 Q48 18 40 18 Q32 18 30 26Z" fill="#111827" />
-          <!-- Yeux -->
-          <circle cx="36" cy="27" r="1.4" fill="#111827" />
-          <circle cx="44" cy="27" r="1.4" fill="#111827" />
-          <!-- Sourire -->
-          <path d="M36 31 Q40 34 44 31" stroke="#111827" stroke-width="1.7" stroke-linecap="round" fill="none" />
-          <!-- Bras gauche (fixe) -->
-          <path d="M30 40 Q22 44 20 52" stroke="#FDE0C2" stroke-width="3.6" stroke-linecap="round" fill="none" />
-          <!-- Bras droit (animé) -->
-          <g class="avatar-arm">
-            <path d="M50 38 Q58 34 62 28" stroke="#FDE0C2" stroke-width="3.6" stroke-linecap="round" fill="none" />
-            <circle cx="63.5" cy="26" r="3.3" fill="#FDE0C2" />
-          </g>
-        </svg>
-      </div>
-    </template>
+<template id="review-avatar-template">
+  <div class="review__avatar">
+    <svg viewBox="0 0 80 80" class="review__avatar-svg" aria-hidden="true">
+      <!-- Fond -->
+      <defs>
+        <linearGradient id="avatar-bg" x1="0" y1="0" x2="1" y2="1">
+          <stop offset="0%" stop-color="#1e293b" />
+          <stop offset="100%" stop-color="#020617" />
+        </linearGradient>
+        <linearGradient id="avatar-shirt" x1="0" y1="0" x2="1" y2="1">
+          <stop offset="0%" stop-color="#f97316" />
+          <stop offset="100%" stop-color="#ec4899" />
+        </linearGradient>
+      </defs>
 
-    <div class="reviews" aria-live="polite" data-magnet></div>
+      <circle cx="40" cy="40" r="36" fill="url(#avatar-bg)" />
+
+      <!-- Montagnes stylisées derrière -->
+      <path d="M10 52 L26 32 L38 46 L48 30 L66 52 Z" fill="#0f172a" opacity="0.9" />
+      <path d="M24 52 L36 38 L46 48 L56 36 L70 52 Z" fill="#111827" opacity="0.9" />
+
+      <!-- Corps -->
+      <rect x="24" y="40" width="32" height="24" rx="10" fill="url(#avatar-shirt)" />
+      <!-- Bretelle sac -->
+      <path d="M30 40 Q28 32 30 26" stroke="#0f172a" stroke-width="3" stroke-linecap="round" />
+
+      <!-- Tête -->
+      <circle cx="40" cy="30" r="11.5" fill="#fde0c2" />
+
+      <!-- Cheveux + bonnet -->
+      <path d="M30 30 Q31 19 40 18 Q49 19 50 30 Z" fill="#111827" />
+      <path d="M30 27 Q40 21 50 27" stroke="#0ea5e9" stroke-width="3" stroke-linecap="round" />
+
+      <!-- Lunettes -->
+      <circle cx="36" cy="29" r="3.1" fill="none" stroke="#0f172a" stroke-width="1.4" />
+      <circle cx="44" cy="29" r="3.1" fill="none" stroke="#0f172a" stroke-width="1.4" />
+      <path d="M39 29 H41" stroke="#0f172a" stroke-width="1.2" />
+
+      <!-- Yeux -->
+      <circle cx="36" cy="29" r="1.2" fill="#0f172a" />
+      <circle cx="44" cy="29" r="1.2" fill="#0f172a" />
+
+      <!-- Sourire -->
+      <path d="M36 33 Q40 36 44 33" stroke="#0f172a" stroke-width="1.8" stroke-linecap="round" fill="none" />
+
+      <!-- Joues -->
+      <circle cx="33" cy="32" r="1.5" fill="#fecaca" />
+      <circle cx="47" cy="32" r="1.5" fill="#fecaca" />
+
+      <!-- Bras gauche (fixe) -->
+      <path d="M30 42 Q22 46 18 52" stroke="#fde0c2" stroke-width="3.4" stroke-linecap="round" fill="none" />
+
+      <!-- Bras droit (animé, coucou) -->
+      <g class="avatar-arm">
+        <path d="M50 40 Q58 34 62 28" stroke="#fde0c2" stroke-width="3.4" stroke-linecap="round" fill="none" />
+        <circle cx="63.5" cy="26" r="3.1" fill="#fde0c2" />
+      </g>
+    </svg>
+  </div>
+</template>
+
+
+    <div class="reviews" aria-live="polite"></div>
 
     <div class="reviews__controls" aria-controls="reviews">
       <button class="prev" type="button" aria-label="Avis précédent" data-magnet>←</button>
