--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 
 <template id="review-avatar-template">
   <div class="review__avatar">
-    <svg viewBox="0 0 80 80" class="review__avatar-svg" aria-hidden="true">
+        <svg viewBox="0 0 80 80" class="review__avatar-svg" aria-hidden="true">
       <!-- Fond -->
       <defs>
         <linearGradient id="avatar-bg" x1="0" y1="0" x2="1" y2="1">
@@ -220,54 +220,47 @@
           <stop offset="100%" stop-color="#020617" />
         </linearGradient>
         <linearGradient id="avatar-shirt" x1="0" y1="0" x2="1" y2="1">
-          <stop offset="0%" stop-color="#f97316" />
-          <stop offset="100%" stop-color="#ec4899" />
+          <stop offset="0%" stop-color="#22c55e" />
+          <stop offset="100%" stop-color="#14b8a6" />
         </linearGradient>
       </defs>
 
       <circle cx="40" cy="40" r="36" fill="url(#avatar-bg)" />
 
-      <!-- Montagnes stylisées derrière -->
-      <path d="M10 52 L26 32 L38 46 L48 30 L66 52 Z" fill="#0f172a" opacity="0.9" />
-      <path d="M24 52 L36 38 L46 48 L56 36 L70 52 Z" fill="#111827" opacity="0.9" />
-
       <!-- Corps -->
-      <rect x="24" y="40" width="32" height="24" rx="10" fill="url(#avatar-shirt)" />
-      <!-- Bretelle sac -->
-      <path d="M30 40 Q28 32 30 26" stroke="#0f172a" stroke-width="3" stroke-linecap="round" />
+      <rect x="24" y="42" width="32" height="22" rx="11" fill="url(#avatar-shirt)" />
 
       <!-- Tête -->
-      <circle cx="40" cy="30" r="11.5" fill="#fde0c2" />
+      <circle cx="40" cy="30" r="12" fill="#FDE0C2" />
 
-      <!-- Cheveux + bonnet -->
-      <path d="M30 30 Q31 19 40 18 Q49 19 50 30 Z" fill="#111827" />
-      <path d="M30 27 Q40 21 50 27" stroke="#0ea5e9" stroke-width="3" stroke-linecap="round" />
+      <!-- Cheveux style court -->
+      <path d="M30 29 Q32 20 40 19 Q48 20 50 29 Z" fill="#111827" />
 
-      <!-- Lunettes -->
-      <circle cx="36" cy="29" r="3.1" fill="none" stroke="#0f172a" stroke-width="1.4" />
-      <circle cx="44" cy="29" r="3.1" fill="none" stroke="#0f172a" stroke-width="1.4" />
-      <path d="M39 29 H41" stroke="#0f172a" stroke-width="1.2" />
+      <!-- Sourcils -->
+      <path d="M34 27 H37" stroke="#111827" stroke-width="1.5" stroke-linecap="round" />
+      <path d="M43 27 H46" stroke="#111827" stroke-width="1.5" stroke-linecap="round" />
 
-      <!-- Yeux -->
-      <circle cx="36" cy="29" r="1.2" fill="#0f172a" />
-      <circle cx="44" cy="29" r="1.2" fill="#0f172a" />
+      <!-- Yeux bien visibles -->
+      <circle cx="35.5" cy="29.5" r="1.7" fill="#111827" />
+      <circle cx="44.5" cy="29.5" r="1.7" fill="#111827" />
 
-      <!-- Sourire -->
-      <path d="M36 33 Q40 36 44 33" stroke="#0f172a" stroke-width="1.8" stroke-linecap="round" fill="none" />
+      <!-- Sourire bien dégagé -->
+      <path d="M34 33 Q40 37 46 33" stroke="#ea580c" stroke-width="2" stroke-linecap="round" fill="none" />
 
       <!-- Joues -->
-      <circle cx="33" cy="32" r="1.5" fill="#fecaca" />
-      <circle cx="47" cy="32" r="1.5" fill="#fecaca" />
+      <circle cx="32.5" cy="32.5" r="1.6" fill="#fecaca" />
+      <circle cx="47.5" cy="32.5" r="1.6" fill="#fecaca" />
 
       <!-- Bras gauche (fixe) -->
-      <path d="M30 42 Q22 46 18 52" stroke="#fde0c2" stroke-width="3.4" stroke-linecap="round" fill="none" />
+      <path d="M30 42 Q22 46 18 52" stroke="#FDE0C2" stroke-width="3.2" stroke-linecap="round" fill="none" />
 
       <!-- Bras droit (animé, coucou) -->
       <g class="avatar-arm">
-        <path d="M50 40 Q58 34 62 28" stroke="#fde0c2" stroke-width="3.4" stroke-linecap="round" fill="none" />
-        <circle cx="63.5" cy="26" r="3.1" fill="#fde0c2" />
+        <path d="M50 40 Q58 34 62 28" stroke="#FDE0C2" stroke-width="3.2" stroke-linecap="round" fill="none" />
+        <circle cx="63.5" cy="26" r="3" fill="#FDE0C2" />
       </g>
     </svg>
+
   </div>
 </template>
 
@@ -285,7 +278,7 @@
   <section id="contact" class="section contact" aria-labelledby="h-contact">
     <div class="container">
       <h2 id="h-contact">On démarre ? <span class="accent">J'ai hâte.</span></h2>
-      <p class="lead">Intervention à domicile & sur rendez-vous exclusivement, conseils et accompagnement sur-mesure.</p>
+      <p class="lead">Intervention à domicile sur rendez-vous exclusivement. Conseils & Accompagnement sur-mesure.</p>
       <div class="contact__grid">
         <a class="cta-tile btn-magnet" href="tel:+33698998001" data-magnet><span>📞</span><strong>06&nbsp;98&nbsp;99&nbsp;80&nbsp;01</strong><small>Appel direct</small></a>
         <a class="cta-tile btn-magnet" href="mailto:contact@informatique-cerdagne.fr" data-magnet><span>✉️</span><strong>contact@informatique-cerdagne.fr</strong><small>Réponse rapide</small></a>
