--- a/index.html
+++ b/index.html
@@ -192,86 +192,130 @@
       </div>
     </div>
   </section>
+  
+ <!-- AVIS -->
+  <section id="avis" class="section avis" aria-labelledby="h-avis">
+    <div class="container">
+      <h2 id="h-avis" data-split>
+        Votre satisfaction : <span class="accent">ma plus grande récompense !</span>
+      </h2>
 
-<section id="avis" class="section avis" aria-labelledby="h-avis">
-  <div class="container">
-    <h2 id="h-avis" data-split>
-      Votre satisfaction : <span class="accent">ma plus grande récompense !</span>
-    </h2>
+      <p class="lead">
+        Avis Google de mes clients.
+        <a
+          href="https://www.google.com/maps/place/Informatique+Cerdagne+-+Rémy+ROGER/@42.4626447,1.9389666,15z/data=!4m6!3m5!1s0xff50f70f4b9a303:0xff407f2d8556019c!8m2!3d42.4626447!4d1.9389666!16s%2Fg%2F11shllyt86?entry=ttu"
+          target="_blank"
+          rel="noopener"
+        >
+          Voir tous les avis sur Google
+        </a>
+      </p>
 
-    <p class="lead">
-      Ce que vous dites de mes services.
-      <a
-        href="https://www.google.com/maps/place/Informatique+Cerdagne+-+Rémy+ROGER/@42.4626447,1.9389666,15z/data=!4m6!3m5!1s0xff50f70f4b9a303:0xff407f2d8556019c!8m2!3d42.4626447!4d1.9389666!16s%2Fg%2F11shllyt86?entry=ttu"
-        target="_blank"
-        rel="noopener"
-      >
-        Voir tous les avis sur Google
-      </a>
-    </p>
+      <!-- Résumé 52 avis – 5/5 -->
+      <div class="reviews__summary" data-magnet>
+        <div class="reviews__summary-left">
+          <p class="reviews__summary-label">Sur Google</p>
+          <div class="reviews__summary-line">
+            <span class="reviews__summary-number" data-counter="count">0</span>
+            <span class="reviews__summary-unit">avis</span>
+          </div>
+        </div>
+        <div class="reviews__summary-right">
+          <div class="reviews__summary-line">
+            <span class="reviews__summary-number" data-counter="rating">0</span>
+            <span class="reviews__summary-unit">/5</span>
+          </div>
+          <div
+            class="reviews__summary-stars"
+            aria-label="Note moyenne 5 sur 5"
+          >
+            <span class="reviews__summary-star">★</span>
+            <span class="reviews__summary-star">★</span>
+            <span class="reviews__summary-star">★</span>
+            <span class="reviews__summary-star">★</span>
+            <span class="reviews__summary-star">★</span>
+          </div>
+        </div>
+      </div>
 
-<template id="review-avatar-template">
-  <div class="review__avatar">
-        <svg viewBox="0 0 80 80" class="review__avatar-svg" aria-hidden="true">
-      <!-- Fond -->
-      <defs>
-        <linearGradient id="avatar-bg" x1="0" y1="0" x2="1" y2="1">
-          <stop offset="0%" stop-color="#1e293b" />
-          <stop offset="100%" stop-color="#020617" />
-        </linearGradient>
-        <linearGradient id="avatar-shirt" x1="0" y1="0" x2="1" y2="1">
-          <stop offset="0%" stop-color="#22c55e" />
-          <stop offset="100%" stop-color="#14b8a6" />
-        </linearGradient>
-      </defs>
+      <!-- Template avatar SVG qui fait coucou -->
+      <template id="review-avatar-template">
+        <div class="review__avatar">
+          <svg viewBox="0 0 80 80" class="review__avatar-svg" aria-hidden="true">
+            <defs>
+              <linearGradient id="avatar-bg" x1="0" y1="0" x2="1" y2="1">
+                <stop offset="0%" stop-color="#111827" />
+                <stop offset="100%" stop-color="#020617" />
+              </linearGradient>
+              <linearGradient id="avatar-shirt" x1="0" y1="0" x2="1" y2="1">
+                <stop offset="0%" stop-color="#F7C600" />
+                <stop offset="100%" stop-color="#FDBA2C" />
+              </linearGradient>
+            </defs>
 
-      <circle cx="40" cy="40" r="36" fill="url(#avatar-bg)" />
+            <circle cx="40" cy="40" r="36" fill="url(#avatar-bg)" />
+            <circle cx="40" cy="30" r="14" fill="rgba(247,198,0,0.18)" />
 
-      <!-- Corps -->
-      <rect x="24" y="42" width="32" height="22" rx="11" fill="url(#avatar-shirt)" />
+            <rect x="24" y="42" width="32" height="22" rx="11" fill="url(#avatar-shirt)" />
+            <path d="M32 42 L40 48 L48 42" fill="rgba(15,23,42,0.45)" />
 
-      <!-- Tête -->
-      <circle cx="40" cy="30" r="12" fill="#FDE0C2" />
+            <circle cx="40" cy="30" r="12" fill="#FDE0C2" />
 
-      <!-- Cheveux style court -->
-      <path d="M30 29 Q32 20 40 19 Q48 20 50 29 Z" fill="#111827" />
+            <path
+              d="M30 31
+                Q32 20 40 20
+                Q48 20 50 31
+                Q45 27 40 27
+                Q35 27 30 31Z"
+              fill="#111827"
+            />
 
-      <!-- Sourcils -->
-      <path d="M34 27 H37" stroke="#111827" stroke-width="1.5" stroke-linecap="round" />
-      <path d="M43 27 H46" stroke="#111827" stroke-width="1.5" stroke-linecap="round" />
+            <path d="M34 27.5 H37" stroke="#111827" stroke-width="1.4" stroke-linecap="round" />
+            <path d="M43 27.5 H46" stroke="#111827" stroke-width="1.4" stroke-linecap="round" />
 
-      <!-- Yeux bien visibles -->
-      <circle cx="35.5" cy="29.5" r="1.7" fill="#111827" />
-      <circle cx="44.5" cy="29.5" r="1.7" fill="#111827" />
+            <circle cx="36" cy="30" r="1.7" fill="#111827" />
+            <circle cx="44" cy="30" r="1.7" fill="#111827" />
 
-      <!-- Sourire bien dégagé -->
-      <path d="M34 33 Q40 37 46 33" stroke="#ea580c" stroke-width="2" stroke-linecap="round" fill="none" />
+            <path
+              d="M34 34 Q40 38 46 34"
+              stroke="#EA580C"
+              stroke-width="2"
+              stroke-linecap="round"
+              fill="none"
+            />
 
-      <!-- Joues -->
-      <circle cx="32.5" cy="32.5" r="1.6" fill="#fecaca" />
-      <circle cx="47.5" cy="32.5" r="1.6" fill="#fecaca" />
+            <circle cx="33" cy="32.4" r="1.6" fill="#FECACA" />
+            <circle cx="47.5" cy="32.4" r="1.6" fill="#FECACA" />
 
-      <!-- Bras gauche (fixe) -->
-      <path d="M30 42 Q22 46 18 52" stroke="#FDE0C2" stroke-width="3.2" stroke-linecap="round" fill="none" />
+            <path
+              d="M30 42 Q22 46 18 52"
+              stroke="#FDE0C2"
+              stroke-width="3.2"
+              stroke-linecap="round"
+              fill="none"
+            />
 
-      <!-- Bras droit (animé, coucou) -->
-      <g class="avatar-arm">
-        <path d="M50 40 Q58 34 62 28" stroke="#FDE0C2" stroke-width="3.2" stroke-linecap="round" fill="none" />
-        <circle cx="63.5" cy="26" r="3" fill="#FDE0C2" />
-      </g>
-    </svg>
+            <g class="avatar-arm">
+              <path
+                d="M50 40 Q58 34 62 28"
+                stroke="#FDE0C2"
+                stroke-width="3.2"
+                stroke-linecap="round"
+                fill="none"
+              />
+              <circle cx="63.5" cy="26" r="3" fill="#FDE0C2" />
+            </g>
+          </svg>
+        </div>
+      </template>
 
-  </div>
-</template>
+      <div class="reviews" aria-live="polite" data-magnet></div>
 
-
-    <div class="reviews" aria-live="polite"></div>
-
-    <div class="reviews__controls" aria-controls="reviews">
-      <button class="prev" type="button" aria-label="Avis précédent" data-magnet>←</button>
-      <button class="next" type="button" aria-label="Avis suivant" data-magnet>→</button>
+      <div class="reviews__controls" aria-controls="reviews">
+        <button class="prev" type="button" aria-label="Avis précédent" data-magnet>←</button>
+        <button class="next" type="button" aria-label="Avis suivant" data-magnet>→</button>
+      </div>
     </div>
-  </div>
   </section>
 
   <!-- CONTACT -->
