--- a/index.html
+++ b/index.html
@@ -200,43 +200,45 @@
         Votre satisfaction : <span class="accent">ma plus grande récompense !</span>
       </h2>
 
-      <p class="lead">
-        Avis Google de mes clients.
-        <a
-          href="https://www.google.com/maps/place/Informatique+Cerdagne+-+Rémy+ROGER/@42.4626447,1.9389666,15z/data=!4m6!3m5!1s0xff50f70f4b9a303:0xff407f2d8556019c!8m2!3d42.4626447!4d1.9389666!16s%2Fg%2F11shllyt86?entry=ttu"
-          target="_blank"
-          rel="noopener"
-        >
-          Voir tous les avis sur Google
-        </a>
-      </p>
-
-      <!-- Résumé 52 avis – 5/5 -->
-      <div class="reviews__summary" data-magnet>
-        <div class="reviews__summary-left">
-          <p class="reviews__summary-label">Sur Google</p>
-          <div class="reviews__summary-line">
-            <span class="reviews__summary-number" data-counter="count">0</span>
-            <span class="reviews__summary-unit">avis</span>
-          </div>
-        </div>
-        <div class="reviews__summary-right">
-          <div class="reviews__summary-line">
-            <span class="reviews__summary-number" data-counter="rating">0</span>
-            <span class="reviews__summary-unit">/5</span>
-          </div>
-          <div
-            class="reviews__summary-stars"
-            aria-label="Note moyenne 5 sur 5"
+      <div class="reviews__top">
+        <p class="lead">
+          Avis Google de mes clients.
+          <a
+            href="https://www.google.com/maps/place/Informatique+Cerdagne+-+Rémy+ROGER/@42.4626447,1.9389666,15z/data=!4m6!3m5!1s0xff50f70f4b9a303:0xff407f2d8556019c!8m2!3d42.4626447!4d1.9389666!16s%2Fg%2F11shllyt86?entry=ttu"
+            target="_blank"
+            rel="noopener"
           >
-            <span class="reviews__summary-star">★</span>
-            <span class="reviews__summary-star">★</span>
-            <span class="reviews__summary-star">★</span>
-            <span class="reviews__summary-star">★</span>
-            <span class="reviews__summary-star">★</span>
+            Voir tous les avis sur Google
+          </a>
+        </p>
+
+        <div class="reviews__summary" data-magnet>
+          <div class="reviews__summary-left">
+            <p class="reviews__summary-label">Sur Google</p>
+            <div class="reviews__summary-line">
+              <span class="reviews__summary-number" data-counter="count">0</span>
+              <span class="reviews__summary-unit">avis</span>
+            </div>
+          </div>
+          <div class="reviews__summary-right">
+            <div class="reviews__summary-line">
+              <span class="reviews__summary-number" data-counter="rating">0</span>
+              <span class="reviews__summary-unit">/5</span>
+            </div>
+            <div
+              class="reviews__summary-stars"
+              aria-label="Note moyenne 5 sur 5"
+            >
+              <span class="reviews__summary-star">★</span>
+              <span class="reviews__summary-star">★</span>
+              <span class="reviews__summary-star">★</span>
+              <span class="reviews__summary-star">★</span>
+              <span class="reviews__summary-star">★</span>
+            </div>
           </div>
         </div>
       </div>
+
 
       <!-- Template avatar SVG qui fait coucou -->
       <template id="review-avatar-template">
