--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 
       <div class="reviews__top">
         <p class="lead">
-          Avis Google de mes clients.
+          Ce que vous dites de mes services.
           <a
             href="https://www.google.com/maps/place/Informatique+Cerdagne+-+Rémy+ROGER/@42.4626447,1.9389666,15z/data=!4m6!3m5!1s0xff50f70f4b9a303:0xff407f2d8556019c!8m2!3d42.4626447!4d1.9389666!16s%2Fg%2F11shllyt86?entry=ttu"
             target="_blank"
@@ -214,7 +214,7 @@
 
         <div class="reviews__summary" data-magnet>
           <div class="reviews__summary-left">
-            <p class="reviews__summary-label">Sur Google</p>
+            <p class="reviews__summary-label">Avis Google</p>
             <div class="reviews__summary-line">
               <span class="reviews__summary-number" data-counter="count">0</span>
               <span class="reviews__summary-unit">avis</span>
@@ -238,7 +238,6 @@
           </div>
         </div>
       </div>
-
 
       <!-- Template avatar SVG qui fait coucou -->
       <template id="review-avatar-template">
