--- a/index.html
+++ b/index.html
@@ -151,60 +151,54 @@
 <section id="prestations" class="section prestations" aria-labelledby="h-prestations">
   <div class="container">
     <h2 id="h-prestations">
-      Prestations <span class="accent">sur-mesure</span>
+      Prestations <span class="accent">sur-mesure en Cerdagne</span>
     </h2>
     <p class="lead">
       Vous ne voyez pas exactement ce dont vous avez besoin ?
       <br>
-      Parlez-moi de votre situation, on construira la solution ensemble 😉
+      Je suis persuadé de pouvoir trouver une solution. Chaque situation est unique, comme chaque village de Cerdagne. 😉
     </p>
 
     <div class="grid-cards">
       <article class="service" data-magnet>
-        <h3>🔧 Dépannage & optimisation</h3>
+        <h3>🔧 Dépannage & Optimisation</h3>
         <p>
-          Nettoyage complet · diagnostic approfondi · branchements (box, écran, périphériques) ·
-          connexions imprimantes & scanners · optimisation des performances.
+          Nettoyage · Diagnostic · Branchements divers · Connexions Imprimantes & Scanners · Optimisation des performances.
         </p>
       </article>
 
       <article class="service" data-magnet>
-        <h3>🛡️ Sécurité & sauvegardes</h3>
+        <h3>🛡️ Sécurité & Sauvegardes</h3>
         <p>
-          Sécurisation de vos appareils · tri & transfert de vos fichiers · récupération de données ·
-          mise en place de sauvegardes locales & cloud.
+          Sécurisation après arnaque ou piratage · Tri & Transfert de vos fichiers · Récupération de données · Sauvegardes locales & cloud.
         </p>
       </article>
 
       <article class="service" data-magnet>
-        <h3>📦 Installations & personnalisation</h3>
+        <h3>📦 Installations & Personnalisation</h3>
         <p>
-          Mise en fonction Windows, macOS & Linux · configuration de PC, tablettes & smartphones ·
-          réglages adaptés à vos usages.
+          Mise en fonction Windows, macOS & Linux · Configuration de PC, Tablettes & Smartphones · Réglages adaptés à vos usages.
         </p>
       </article>
 
       <article class="service" data-magnet>
-        <h3>💡 Conseils & achat</h3>
+        <h3>💡 Conseils & Achat</h3>
         <p>
-          Recommandations d’achat 100&nbsp;% indépendantes : aucun stock, aucune commission ·
-          choix du meilleur rapport qualité/prix · repérage des bonnes offres du moment.
+          Recommandations d’achat 100&nbsp;% désintéressées : choix du meilleur rapport qualité/prix · Repérage des bonnes offres du moment. Identification précise de votre besoin
         </p>
       </article>
 
       <article class="service" data-magnet>
-        <h3>🖥️ Sites & visibilité</h3>
+        <h3>🖥️ Programmation & Visibilité</h3>
         <p>
-          Site vitrine · présence locale (Google, Maps) · réseaux sociaux ·
-          conseils en stratégie de communication & marketing digital.
+          Site web · Réseaux sociaux · Conseils en stratégie de communication & Marketing digital · Création applications & algorithmes (automatisation des tâches) · Création flyers & logos
         </p>
       </article>
 
       <article class="service" data-magnet>
-        <h3>📚 Formation & accompagnement</h3>
+        <h3>📚 Formation & Accompagnement</h3>
         <p>
-          Audit & conseils personnalisés · cours d’initiation · accompagnement pas à pas à la maison ·
-          prise en main sereine de vos outils numériques.
+          Audit & Conseils · Cours d'informatique · Accompagnement pas à pas à la maison · Aide à la prise en main sereine de vos outils numériques.
         </p>
       </article>
     </div>
