--- a/index.html
+++ b/index.html
@@ -161,47 +161,70 @@
 
     <div class="grid-cards">
       <article class="service" data-magnet>
-        <h3>🔧 Dépannage & Optimisation</h3>
-        <p>
-          Nettoyage · Diagnostic · Branchements divers · Connexions Imprimantes & Scanners · Optimisation des performances.
-        </p>
+        <h3>🔧 Dépannage & optimisation</h3>
+        <p class="service-tagline">Quand ça rame, plante ou ne s’allume plus.</p>
+        <ul class="service-list">
+          <li>Nettoyage et diagnostic complet</li>
+          <li>Branchements divers & connexions (imprimantes, scanners, box…)</li>
+          <li>Optimisation des performances</li>
+        </ul>
       </article>
 
       <article class="service" data-magnet>
-        <h3>🛡️ Sécurité & Sauvegardes</h3>
-        <p>
-          Sécurisation après arnaque ou piratage · Tri & Transfert de vos fichiers · Récupération de données · Sauvegardes locales & cloud.
-        </p>
+        <h3>🛡️ Sécurité & sauvegardes</h3>
+        <p class="service-tagline">Protéger vos données et vos souvenirs.</p>
+        <ul class="service-list">
+          <li>Sécurisation après arnaque ou tentative de piratage</li>
+          <li>Tri & transfert de vos fichiers importants</li>
+          <li>Récupération de données (quand c’est encore possible)</li>
+          <li>Sauvegardes locales & cloud adaptées à vos usages</li>
+        </ul>
       </article>
 
       <article class="service" data-magnet>
-        <h3>📦 Installations & Personnalisation</h3>
-        <p>
-          Mise en fonction Windows, macOS & Linux · Configuration de PC, Tablettes & Smartphones · Réglages adaptés à vos usages.
-        </p>
+        <h3>📦 Installations & personnalisation</h3>
+        <p class="service-tagline">Mettre en route vos appareils sans prise de tête.</p>
+        <ul class="service-list">
+          <li>Mise en fonction Windows, macOS & Linux</li>
+          <li>Configuration de PC, tablettes & smartphones</li>
+          <li>Réglages adaptés à vos usages et à votre confort</li>
+        </ul>
       </article>
 
       <article class="service" data-magnet>
-        <h3>💡 Conseils & Achat</h3>
-        <p>
-          Recommandations d’achat 100&nbsp;% désintéressées : choix du meilleur rapport qualité/prix · Repérage des bonnes offres du moment. Identification précise de votre besoin
-        </p>
+        <h3>💡 Conseils & achat</h3>
+        <p class="service-tagline">Acheter juste, pas plus.</p>
+        <ul class="service-list">
+          <li>Recommandations d’achat 100&nbsp;% désintéressées (aucune commission)</li>
+          <li>Choix du meilleur rapport qualité/prix selon votre usage</li>
+          <li>Repérage des bonnes offres du moment</li>
+          <li>Identification claire de votre besoin</li>
+        </ul>
       </article>
 
       <article class="service" data-magnet>
-        <h3>🖥️ Programmation & Visibilité</h3>
-        <p>
-          Site web · Réseaux sociaux · Conseils en stratégie de communication & Marketing digital · Création applications & algorithmes (automatisation des tâches) · Création flyers & logos
-        </p>
+        <h3>🖥️ Programmation & visibilité</h3>
+        <p class="service-tagline">Gagner du temps et être visible là où sont vos clients.</p>
+        <ul class="service-list">
+          <li>Sites web & présence locale (Google, Maps…)</li>
+          <li>Réseaux sociaux & stratégie de communication digitale</li>
+          <li>Création de petites applications & automatisation de tâches</li>
+          <li>Création de supports simples : flyers & logos</li>
+        </ul>
       </article>
 
       <article class="service" data-magnet>
-        <h3>📚 Formation & Accompagnement</h3>
-        <p>
-          Audit & Conseils · Cours d'informatique · Accompagnement pas à pas à la maison · Aide à la prise en main sereine de vos outils numériques.
-        </p>
+        <h3>📚 Formation & accompagnement</h3>
+        <p class="service-tagline">Apprendre à votre rythme, sans jargon.</p>
+        <ul class="service-list">
+          <li>Audit & conseils personnalisés</li>
+          <li>Cours d’informatique sur vos propres outils</li>
+          <li>Accompagnement pas à pas à la maison</li>
+          <li>Aide à la prise en main sereine de vos outils numériques</li>
+        </ul>
       </article>
     </div>
+
   </div>
 </section>
 
