--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
         <p class="service-tagline">Quand ça rame, plante ou ne s’allume plus.</p>
         <ul class="service-list">
           <li>Nettoyage et diagnostic complet</li>
-          <li>Branchements divers & connexions (imprimantes, scanners, box…)</li>
+          <li>Branchements divers & connexions (imprimantes, scanners, écrans, box…)</li>
           <li>Optimisation des performances</li>
         </ul>
       </article>
@@ -177,7 +177,7 @@
           <li>Sécurisation après arnaque ou tentative de piratage</li>
           <li>Tri & transfert de vos fichiers importants</li>
           <li>Récupération de données (quand c’est encore possible)</li>
-          <li>Sauvegardes locales & cloud adaptées à vos usages</li>
+          <li>Sauvegardes locales & cloud</li>
         </ul>
       </article>
 
@@ -195,7 +195,7 @@
         <h3>💡 Conseils & achat</h3>
         <p class="service-tagline">Acheter juste, pas plus.</p>
         <ul class="service-list">
-          <li>Recommandations d’achat 100&nbsp;% désintéressées (aucune commission)</li>
+          <li>Recommandations d’achat 100&nbsp;% désintéressées</li>
           <li>Choix du meilleur rapport qualité/prix selon votre usage</li>
           <li>Repérage des bonnes offres du moment</li>
           <li>Identification claire de votre besoin</li>
@@ -204,12 +204,12 @@
 
       <article class="service" data-magnet>
         <h3>🖥️ Programmation & visibilité</h3>
-        <p class="service-tagline">Gagner du temps et être visible là où sont vos clients.</p>
+        <p class="service-tagline">Gagner du temps et être visible.</p>
         <ul class="service-list">
-          <li>Sites web & présence locale (Google, Maps…)</li>
+          <li>Sites web</li>
           <li>Réseaux sociaux & stratégie de communication digitale</li>
-          <li>Création de petites applications & automatisation de tâches</li>
-          <li>Création de supports simples : flyers & logos</li>
+          <li>Création d'applications & automatisation de tâches</li>
+          <li>Création de flyers & logos</li>
         </ul>
       </article>
 
@@ -218,13 +218,12 @@
         <p class="service-tagline">Apprendre à votre rythme, sans jargon.</p>
         <ul class="service-list">
           <li>Audit & conseils personnalisés</li>
-          <li>Cours d’informatique sur vos propres outils</li>
-          <li>Accompagnement pas à pas à la maison</li>
+          <li>Cours d’informatique</li>
+          <li>Accompagnement pas à pas</li>
           <li>Aide à la prise en main sereine de vos outils numériques</li>
         </ul>
       </article>
     </div>
-
   </div>
 </section>
 
