--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 
       <article class="service" data-magnet>
         <h3>📦 Installations & personnalisation</h3>
-        <p class="service-tagline">Mettre en route vos appareils sans prise de tête.</p>
+        <p class="service-tagline">Être opérationnel, sans prise de tête.</p>
         <ul class="service-list">
           <li>Mise en fonction Windows, macOS & Linux</li>
           <li>Configuration de PC, tablettes & smartphones</li>
