--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 <section id="prestations" class="section prestations" aria-labelledby="h-prestations">
   <div class="container">
     <h2 id="h-prestations">
-      Prestations <span class="accent">sur-mesure en Cerdagne</span>
+      Prestations <span class="accent">sur-mesure</span>
     </h2>
     <p class="lead">
       Vous ne voyez pas exactement ce dont vous avez besoin ?
